# Disciplina_Log_Prog

./: README.md  main.c
inc/: infox.h
projeto_0_tipos_dados/: main.c
projeto_1_tipos_dados/: main.c
projeto_base_cmake/: CMakeLists.txt
projeto_base_cmake/inc/: math.h
projeto_base_cmake/src/: infox.c  math.c
src/: infox.c
